# OGM-CBF

./: .gitignore  README.md  readme.md
docker/: amm-ogm-cbf-eevee.Dockerfile  amm-ogm-cbf.Dockerfile  build-docker.sh  run-docker-lncode.sh  run-docker.sh  tmux.conf
joystick_controller/: ps4_control_interface.py
ogm/: .gitignore  README.md
ogm/gridmap/: CMakeLists.txt  README.md
ogm/gridmap/cmake/: gridmapConfig.cmake.in
ogm/gridmap/examples/C/: main.c  voxel_main.c
ogm/gridmap/examples/C++/: local_map.cpp  map_builder.cpp  voxel_map.cpp
ogm/gridmap/src/: datatypes.h  gridmap.h
ogm/gridmap/src/utils/: io.h  matrix.h  render.h  render_voxel.h
ogm/ogm_gridmap/: CMakeLists.txt  ogm_gridmapConfig.cmake.in  ogm_gridmapConfigVersion.cmake.in  package.xml
ogm/ogm_gridmap/include/: elevation_gridmap.h  elevation_gridmap_node.h  elevation_gridmap_tool.h  gridmap.h  gridmap_node.h  manual_sync.h  offset_odom_node.h  pcd_transformer_node.h  pt_clearance.h  rutmap_node.h  scan2pcd_node.h  sensor_model.h
ogm/ogm_gridmap/src/: main_elevation_gridmap.cpp  main_elevation_gridmap_tool.cpp  main_gridmap.cpp  main_offset_odom.cpp  main_pcd_transformer.cpp  main_rutmap.cpp  main_scan2pcd.cpp
ogm/ogm_mission/: CMakeLists.txt  package.xml
ogm/ogm_mission/launch/: ogm.rviz
ogm/ogm_mission/launch/carla/: ogm.launch.py  ogm_carla.rviz  ogm_rviz.launch  tf_handler.launch.py
ogm/ogm_mission/launch/eevee/: elevimg.launch.py  ogm.launch.py  ogm_eevee.rviz  ogm_rviz.launch  tf_handler.launch.py
ogm/ogm_mission/launch/mir/: ogm_rviz.launch
ogm/ogm_mission/launch/rover/: livox_odom.launch  mid360pc2.yaml  ogm_rover.rviz  ogm_undistort.launch
ogm/ogm_tools/: package.xml  setup.cfg  setup.py
ogm/ogm_tools/ogm_tools/: map_crop_memory.py  odom_cmd.py  odom_transform.py  stf_repub.py  tf2odom.py
ogm/python/: gridmap.py  pcd_to_ogm.py  requirements.txt  utils.py
ogm/python/map_tools/: map_crop.py  map_scan_global.py
ogm/python/util/: data_to_header.py
ogm/ros_ws/: REAMDE.md
ogm/ros_ws/src/mir_description/: CMakeLists.txt  package.xml
ogm/ros_ws/src/mir_description/launch/: description.launch.py  display.launch.py
ogm/ros_ws/src/mir_description/rviz/: mir_description.rviz
ogm/ros_ws/src/mir_description/urdf/: mir.urdf.xacro
ogm/ros_ws/src/mir_description/urdf/include/: mir_100.gazebo.xacro  mir_100_v1.urdf.xacro  sick_s300.urdf.xacro
ogm/ros_ws/src/ogm_gridmap/: CMakeLists.txt  package.xml
ogm/ros_ws/src/ogm_gridmap/include/: delay_node.h  gridmap.h  gridmap_node.h  laserscan_node.h  laserscan_transformer_node.h  manual_sync.h  offset_odom_node.h  pcd_transformer_node.h  pointcloud_node.h  pose_2_odom_node.h  scan2pcd_node.h  sensor_base.h  sensor_model.h  utils.h  wall_vis_node.h
ogm/ros_ws/src/ogm_gridmap/src/: laserscan_node.cpp  main_cmd_delay.cpp  main_laserscan_transformer.cpp  main_pose_2_odom.cpp  main_wall_vis.cpp  pointcloud_node.cpp
ogm/ros_ws/src/ogm_tools/: setup.py
ogm/ros_ws/src/ogm_tools/ogm_tools/: camera_broadcaster.py  tf2odom.py
ros2_ws/: cbf_array.xml  cbf_cmd_vel.xml  cbf_layout_latest.xml  cbf_layout_update.xml  cbf_plotjuggler_layout.xml  mir_cbf.xml
ros2_ws/src/ogm_cbf_kinematic_sim/: hyperparams.yaml  package.xml  setup.cfg  setup.py
ros2_ws/src/ogm_cbf_kinematic_sim/config/: cbf_params.yaml  map_params.yaml
ros2_ws/src/ogm_cbf_kinematic_sim/launch/: afs_bringup.launch.py  bringup.launch.py  cbf.launch.py  mir_sim_backend.launch.py  ogm.launch.py  ogm.rviz  ogm_basic.launch.py  ogm_lr.launch.py  ogm_rviz.launch  record_qos.yaml  tf_handler.launch.py  tf_handler_t265.launch.py  tf_tag.launch.py
ros2_ws/src/ogm_cbf_kinematic_sim/launch/vis/: carla_view.rviz  festia_view.rviz  mir_vis.launch  wall_vis.launch  wall_vis_carla.launch
ros2_ws/src/ogm_cbf_kinematic_sim/map/: map_publisher_node.py
ros2_ws/src/ogm_cbf_kinematic_sim/ogm_cbf_kinematic_sim/: carla_low_level_control.py  cbf_data.csv  conf.py  kinematic_afs_sim_node.py  kinematic_diff_drive_sim_node.py  map_viz_node.py  ogm_cbf_clf_node.py  ogm_cbf_clf_node_afs.py  ogm_cbf_clf_node_mir.py  ogm_cbf_clf_node_mir_global.py  ogm_cbf_clf_node_mir_pyr.py  plot.py  start_pose_selector_node.py  utils.py  wandb_logger_node.py
ros2_ws/src/ogm_cbf_kinematic_sim/ogm_cbf_kinematic_sim/map/: __init__.py  map_publisher_node.py
ros2_ws/src/ogm_cbf_kinematic_sim/ogm_cbf_kinematic_sim/map/festia_map/: save_images.py
ros2_ws/src/vcbf/: record_qos.yaml  spawn_obstacles.py  vcbf_distance.py  vcbf_distance_ros.py  vcbf_paper_scenario.py
scripts/: agg_carla.py  kinpyr_traj_s8.txt  mir_scenario.py  vis_colorbars.py  vis_h.py  vis_h_frames.py  vis_h_frames_ffmpeg.sh  vis_kinpyr.py  vis_sdf.py
